What a huge improvement

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <meta http-equiv="XA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
+    <link href="output.css" rel="stylesheet" />
 </head>
-<body>
+<body >
+<body class="animate-rainbow-river">
 <div id="header">
     <div class="container">
         <nav>
